--- a/src/App/Server/GoldEx.Server/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Shared/ExternalLoginPicker.razor
@@ -8,7 +8,7 @@
 
 @if (_externalLogins.Length == 0)
 {
-    <MudAlert Variant="Variant.Text" Severity="Severity.Warning">هیچ سرویس خارجی برای ورود به سیستم تنظیم نشده است</MudAlert>
+    <MudAlert Variant="Variant.Text" Severity="Severity.Warning" Dense="true" ContentAlignment="HorizontalAlignment.Start">هیچ سرویس خارجی برای ورود به سیستم تنظیم نشده است</MudAlert>
     <MudText Typo="Typo.body1" Class="pt-4">
         لطفا با مدیر سیستم ارتباط بگیرید
     </MudText>
