--- a/src/App/Server/GoldEx.Server/Components/Account/Shared/StatusMessage.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Shared/StatusMessage.razor
@@ -1,9 +1,7 @@
 ﻿@using GoldEx.Server.Services
 @if (!string.IsNullOrEmpty(DisplayMessage))
 {
-    var severity = DisplayMessage.StartsWith("Error") ? Severity.Error : Severity.Success;
-
-    <MudAlert Variant="Variant.Outlined" Severity="@severity">@DisplayMessage</MudAlert>
+    <MudAlert Variant="Variant.Outlined" Severity="@Severity" ContentAlignment="HorizontalAlignment.Start" Dense="true">@DisplayMessage</MudAlert>
 }
 
 @code {
@@ -11,6 +9,8 @@
 
     [Parameter]
     public string? Message { get; set; }
+
+    [Parameter] public Severity Severity { get; set; } = Severity.Info;
 
     [CascadingParameter]
     private HttpContext HttpContext { get; set; } = default!;
