--- a/src/App/Client/GoldEx.Client.Components/Layouts/Components/Drawer.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/Components/Drawer.razor
@@ -1,17 +1,12 @@
-﻿<MudDrawer id="nav-drawer" @bind-Open="IsDrawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
+﻿<MudDrawer @bind-Open="IsDrawerOpen"
+           Elevation="5"
+           Breakpoint="Breakpoint.Xs"
+           Variant="DrawerVariant.Mini"
+           ClipMode="DrawerClipMode.Always">
     <NavMenu />
 </MudDrawer>
 
 @code
 {
-    [Parameter]
-    public EventCallback OnDrawerToggle { get; set; }
-
-    [Parameter]
-    public bool IsDrawerOpen { get; set; }
-
-    private void DrawerToggle()
-    {
-        OnDrawerToggle.InvokeAsync();
-    }
+    [Parameter] public bool IsDrawerOpen { get; set; }
 }
