--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -16,8 +16,8 @@
 
 <StatusMessage />
 
-<MudAlert Severity="Severity.Warning" Variant="Variant.Text">
-    ر صورت بازنشانی کلید احراز هویت، برنامه احراز هویت شما تا پیکربندی مجدد آن غیرفعال خواهد شد.
+<MudAlert Severity="Severity.Warning" Variant="Variant.Text" ContentAlignment="HorizontalAlignment.Start">
+    در صورت بازنشانی کلید احراز هویت، برنامه احراز هویت شما تا پیکربندی مجدد آن غیرفعال خواهد شد.
 </MudAlert>
 
 <MudText Typo="Typo.body2" Class="my-4">
