--- a/src/App/Client/GoldEx.Client.Components/Layouts/MainLayout.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/MainLayout.razor
@@ -2,8 +2,8 @@
 @layout BaseLayout
 
 <MudLayout>
-    <AppBar OnDrawerToggle="HandleDrawerToggle" IsDrawerOpen="_drawerOpen" />
-    <Drawer OnDrawerToggle="HandleDrawerToggle" IsDrawerOpen="_drawerOpen" />
+    <AppBar @bind-DrawerOpen="_drawerOpen" />
+    <Drawer IsDrawerOpen="_drawerOpen" />
     <MudMainContent Class="mt-16 pa-4">
         @Body
     </MudMainContent>
@@ -11,10 +11,5 @@
 
 @code
 {
-    private bool _drawerOpen = true;
-
-    private void HandleDrawerToggle()
-    {
-        _drawerOpen = !_drawerOpen;
-    }
+    private bool _drawerOpen;
 }
