--- a/src/App/Client/GoldEx.Client/Pages/Home.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home.razor
@@ -5,3 +5,10 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<MudButton Color="Color.Primary" Variant="Variant.Filled">Click me</MudButton>
+<MudButton Color="Color.Secondary" Variant="Variant.Filled">Click me</MudButton>
+<MudButton Color="Color.Success" Variant="Variant.Filled">Click me</MudButton>
+<MudButton Color="Color.Default" Variant="Variant.Filled">Click me</MudButton>
+<MudButton Color="Color.Info" Variant="Variant.Filled">Click me</MudButton>
+<MudButton Color="Color.Dark" Variant="Variant.Filled">Click me</MudButton>
