--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
@@ -12,33 +12,33 @@
 
 <PageTitle>تنظیم رمز عبور</PageTitle>
 
-<h3>تنظیم رمز عبور</h3>
+<MudText Typo="Typo.h6" GutterBottom="true">تنظیم رمز عبور</MudText>
+
 <StatusMessage Message="@_message" />
+
 <p class="text-info">
     شما برای این سایت نام کاربری/رمز عبور محلی ندارید.
     یک حساب کاربری محلی اضافه کنید تا بتوانید بدون ورود با سرویس وارد شوید.
 </p>
-<div class="row">
-    <div class="col-xl-6">
-        <EditForm Model="Input" FormName="set-password" OnValidSubmit="OnValidSubmitAsync" method="post">
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" role="alert" />
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" id="Input.NewPassword" class="form-control" 
-                           autocomplete="new-password" placeholder="رمز عبور جدید خود را وارد کنید" />
-                <label for="Input.NewPassword" class="form-label">رمز عبور جدید</label>
-                <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
-            </div>
-            <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" id="Input.ConfirmPassword" class="form-control" 
-                           autocomplete="new-password" placeholder="رمز عبور جدید خود را وارد کنید" />
-                <label for="Input.ConfirmPassword" class="form-label">تکرار رمز عبور جدید</label>
-                <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">تنظیم رمز عبور</button>
-        </EditForm>
-    </div>
-</div>
+<EditForm Model="Input" FormName="change-password" OnValidSubmit="OnValidSubmitAsync" method="post">
+    <DataAnnotationsValidator />
+
+    <MudGrid>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.NewPassword)" @bind-Value="Input.NewPassword" InputType="InputType.Password"
+                                Label="رمز عبور جدید" Placeholder="رمز عبور جدید" HelperText="لطفا رمز عبور جدید خود را وارد کنید"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticTextField For="@(() => Input.ConfirmPassword)" @bind-Value="Input.ConfirmPassword" InputType="InputType.Password"
+                                Label="تکرار رمز عبور" Placeholder="تکرار رمز عبور" HelperText="لطفا رمز عبور جدید خود را تکرار کنید"
+                                UserAttributes="@(new Dictionary<string, object?> { { "autocomplete", "new-password" }, { "aria-required", "true" } } )" />
+        </MudItem>
+        <MudItem md="12">
+            <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit">تنظیم رمز عبور</MudStaticButton>
+        </MudItem>
+    </MudGrid>
+</EditForm>
 
 @code {
     private string? _message;
